Fix parsing of content-types with options (bug 138639).  r=bbaetz, sr=darin.